# MOADE

./: CMakeLists.txt
MOADE_DPFSPE/: CMakeLists.txt  Globali.h  GruppoPDZN.cpp  GruppoPDZN.h  Istanza.cpp  Istanza.h  MOADE.h  MOADE_DPFSPE.cpp  MOADE_DPFSPE.h  Main.cpp  Main.h  Modulo.cpp  Modulo.h  Permutazione.cpp  Permutazione.h  PermutazioneI.cpp  PermutazioneI.h  PermutazioneST.cpp  PermutazioneST.h  PermutazioneT.cpp  PermutazioneT.h  Random.h  doe.py  test.py
